# BotServer

./: .deployment  .env  .gitignore  .npmignore  .nycrc  .prettierrc  .test-init.ts  .travis.yaml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT-pt-br.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DATABASE-CHANGES.md  FEATURES.md  LICENSE  LICENSE.txt  LOCALIZATION.md  README-6.md  README.md  ROADMAP.md  SAMPLES.md  SECURITY.md  VERSION.md  WARNINGS.md  add-req.sh  additional-packages.cmd  api-template.json  blank.docx  blank.xlsx  boot.js  boot.mjs  deploy.cmd  deploy.sh  dev-start.sh  diesel.toml  directline-3.0-local.json  directline-3.0.json  directline-v2.json  (+25 more)
.forgejo/workflows/: node.yaml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  invite-contributors.yml  settings.yml
.github/ISSUE_TEMPLATE/: requirement
.github/workflows/: master_prod-generalbotslinux.yml  master_prod-oppbotlinux.yml
.wwebjs_cache/: 2.3000.1017045687.html  2.3000.1017050905.html  2.3000.1017054665.html
.zed/: debug.json
deploy/admin.gbapp/: index.ts  strings.ts
deploy/analytics.gblib/: index.ts
deploy/azuredeployer.gbapp/: index.ts
deploy/azuredeployer.gblib/: index.ts
deploy/console.gblib/: index.ts
deploy/core.gbapp/: index.ts  strings.ts
deploy/customer-satisfaction.gbapp/: index.ts  strings.ts
deploy/default.gbui/: package-lock.json  package.json
deploy/kb.gbapp/: index.ts  strings.ts
deploy/security.gblib/: index.ts
deploy/whatsapp.gblib/: index.ts
docs/: CHANGELOG_TOOL_MANAGEMENT.md  DEPLOYMENT_CHECKLIST.md  DEV.md  GLOSSARY.md  KB_AND_TOOLS.md  QUICKSTART_KB_TOOLS.md  TOOL_MANAGEMENT.md  TOOL_MANAGEMENT_QUICK_REF.md
docs/classes/: _deploy_admin_gbapp_dialogs_admindialog_.admindialog.html  _deploy_core_gbapp_dialogs_welcomedialog_.welcomedialog.html  _deploy_core_gbapp_models_gbmodel_.guaribaschannel.html  _deploy_core_gbapp_models_gbmodel_.guaribasexception.html  _deploy_core_gbapp_models_gbmodel_.guaribasinstance.html  _deploy_core_gbapp_services_gbimporter_.gbimporter.html  _deploy_customer_satisfaction_gbapp_dialogs_qualitydialog_.qualitydialog.html  _deploy_customer_satisfaction_gbapp_index_.gbcustomersatisfactionpackage.html  _deploy_customer_satisfaction_gbapp_models_index_.guaribasquestionalternate.html  _deploy_kb_gbapp_dialogs_faqdialog_.faqdialog.html  _deploy_kb_gbapp_index_.gbkbpackage.html  _deploy_kb_gbapp_models_index_.guaribasanswer.html  _deploy_kb_gbapp_models_index_.guaribasquestion.html  _deploy_kb_gbapp_models_index_.guaribassubject.html  _deploy_security_gblib_index_.gbsecuritypackage.html  _deploy_security_gblib_models_index_.guaribasgroup.html  _deploy_security_gblib_models_index_.guaribasuser.html  _deploy_security_gblib_services_secservice_.secservice.html
docs/guide/: automation.md
docs/keywords/: PROMPT.md  format.md  last.md
docs/modules/: _deploy_admin_gbapp_dialogs_admindialog_.html  _deploy_analytics_gblib_models_index_.html  _deploy_analytics_gblib_services_analyticsservice_.html  _deploy_core_gbapp_dialogs_welcomedialog_.html  _deploy_core_gbapp_dialogs_whoamidialog_.html  _deploy_core_gbapp_services_gbconfigservice_.html  _deploy_core_gbapp_services_gbconversationalservice_.html  _deploy_core_gbapp_services_gbcoreservice_.html  _deploy_core_gbapp_services_gbdeployer_.html  _deploy_core_gbapp_services_gbimporter_.html  _deploy_core_gbapp_services_gbminservice_.html  _deploy_customer_satisfaction_gbapp_dialogs_feedbackdialog_.html  _deploy_customer_satisfaction_gbapp_dialogs_qualitydialog_.html  _deploy_customer_satisfaction_gbapp_index_.html  _deploy_kb_gbapp_dialogs_faqdialog_.html  _deploy_kb_gbapp_services_kbservice_.html  _src_app_.html
docs/platform/: DEV.md  limits_llm.md
docs/reference/: globals.html  index.html
examples/: enrollment_with_kb.bas  pricing_with_kb.bas  start.bas  tool_management_example.bas
migrations/: 6.0.0.sql  6.0.2.sql  6.0.3.sql  6.0.4.sql
prompts/: geral.bas
prompts/ai/: analyze-customer-sentiment.bas
prompts/analytics/: sales-performance.bas
prompts/code/: system-code.bas
src/: RootData.ts  api.ts  app.ts  logger.ts  main.rs  util.test.ts  util.ts  webapp.ts
static/: index.html
templates/: README.md
web/: index.html
(+386 files in other folders)
