[package]
name = "botserver"
version = "6.0.4"
edition = "2021"
authors = [
    "@AlanPerdomo",
    "@AnaPaulaGil",
    "@arenasio",
    "@AtyllaL",
    "@christopherdecastilho",
    "@danielolima96",
    "@Dariojunior3",
    "@davidlerner26",
    "@ExperimentationGarage",
    "@flavioandrade91",
    "@HeraldoAlmeida",
    "@joao-parana",
    "@jonathasc",
    "@jramos-br",
    "@lpicanco",
    "@marcosvelasco",
    "@matheus39x",
    "@oerlabshenrique",
    "@othonlima",
    "@PH-Nascimento",
    "@phpussente",
    "@RobsonDantasE",
    "@rodrigorodriguez",
    "@SarahLourenco",
    "@thipatriota",
    "@webgus",
    "@ZuilhoSe",
]
description = "General Bots Server"
license = "AGPL-3.0"
repository = "https://alm.pragmatismo.com.br/generalbots/botserver"

[features]
default = ["vectordb"]
vectordb = ["qdrant-client"]
email = ["imap"]
web_automation = ["headless_chrome"]


[dependencies]
actix-cors = "0.7"
actix-multipart = "0.7"
imap = { version = "3.0.0-alpha.15", optional = true }
actix-web = "4.9"
actix-ws = "0.3"
anyhow = "1.0"
async-stream = "0.3"
async-trait = "0.1"
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22"
bytes = "1.8"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.1", features = ["postgres", "uuid", "chrono", "serde_json"] }
dotenvy = "0.15"
downloader = "0.2"
env_logger = "0.11"
futures = "0.3"
futures-util = "0.3"
lettre = { version = "0.11", features = ["smtp-transport", "builder", "tokio1", "tokio1-native-tls"] }
livekit = "0.7"
log = "0.4"
mailparse = "0.15"
native-tls = "0.2"
num-format = "0.4"
qdrant-client = { version = "1.12", optional = true }
rhai = { git = "https://github.com/therealprof/rhai.git", branch = "features/use-web-time" }
redis = { version = "0.27", features = ["tokio-comp"] }
regex = "1.11"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smartstring = "1.0"
tempfile = "3"
tokio = { version = "1.41", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
urlencoding = "2.1"
uuid = { version = "1.11", features = ["serde", "v4"] }
zip = "2.2"
time = "0.3.44"
aws-sdk-s3 = "1.108.0"
headless_chrome = { version = "1.0.18", optional = true }
rand = "0.9.2"
pdf-extract = "0.10.0"
scraper = "0.20"
sha2 = "0.10.9"
